--- a/Cliente (Angular)/src/index.html
+++ b/Cliente (Angular)/src/index.html
@@ -15,6 +15,9 @@
 
 <body>
   <app-root></app-root>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDiAySrtbU-1iSkN0YNMbbpb09PACD5mho">
+  </script>
 </body>
 
 </html>
