(Client) Probando GoogleMaps diferentes propuestas

--- a/Cliente-Angular/src/index.html
+++ b/Cliente-Angular/src/index.html
@@ -15,6 +15,7 @@
 <body>
   <app-root></app-root>
 
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDiAySrtbU-1iSkN0YNMbbpb09PACD5mho&callback=initMap"></script> -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDiAySrtbU-1iSkN0YNMbbpb09PACD5mho">
   </script>
 </body>
